# DeltaKernel-Android-KO-Build

./: README.md
.github/workflows/: build_android_ko.yml
android_client/: CMakeLists.txt  delta_client.cpp  driver_client.cpp  driver_client.hpp  game_reader.cpp  game_reader.hpp  main.cpp  proc_maps.cpp  proc_maps.hpp  snapshot.hpp
docs/: 渲染隔离设计.md
imgui_core/: CMakeLists.txt  imgui_panel.cpp  imgui_panel.hpp
kernel_module/: Makefile  delta_kernel.c
research/: 精确源码定位.md  高精度检索结论.md
scripts/: build_full_and_ko.sh  build_ko.ps1  build_ko.sh  push_test_ko.ps1  unload_ko.ps1  verify_build_inputs.py
shared/: delta_protocol.h
